--- a/phonebook-manager-cs/phonebook-manager-cs.csproj
+++ b/phonebook-manager-cs/phonebook-manager-cs.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Create_Contact.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Create_Contact.Designer.cs">
+      <DependentUpon>Create_Contact.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Create_Contact.resx">
+      <DependentUpon>Create_Contact.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
