--- a/phonebook-manager-cs/phonebook-manager-cs.csproj
+++ b/phonebook-manager-cs/phonebook-manager-cs.csproj
@@ -66,6 +66,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search_Contact.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Search_Contact.Designer.cs">
+      <DependentUpon>Search_Contact.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Create_Contact.resx">
       <DependentUpon>Create_Contact.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +90,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Search_Contact.resx">
+      <DependentUpon>Search_Contact.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
