--- a/phonebook-manager-cs/phonebook-manager-cs.csproj
+++ b/phonebook-manager-cs/phonebook-manager-cs.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Search_Contact.Designer.cs">
       <DependentUpon>Search_Contact.cs</DependentUpon>
     </Compile>
+    <Compile Include="Update_Contact.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Update_Contact.Designer.cs">
+      <DependentUpon>Update_Contact.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Create_Contact.resx">
       <DependentUpon>Create_Contact.cs</DependentUpon>
     </EmbeddedResource>
@@ -92,6 +98,9 @@
     </Compile>
     <EmbeddedResource Include="Search_Contact.resx">
       <DependentUpon>Search_Contact.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Update_Contact.resx">
+      <DependentUpon>Update_Contact.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
