--- a/phonebook-manager-cs/phonebook-manager-cs.csproj
+++ b/phonebook-manager-cs/phonebook-manager-cs.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Create_Contact.Designer.cs">
       <DependentUpon>Create_Contact.cs</DependentUpon>
     </Compile>
+    <Compile Include="Delete_Contact.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Delete_Contact.Designer.cs">
+      <DependentUpon>Delete_Contact.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     </Compile>
     <EmbeddedResource Include="Create_Contact.resx">
       <DependentUpon>Create_Contact.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Delete_Contact.resx">
+      <DependentUpon>Delete_Contact.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
