--- a/phonebook-manager-cs/App.config
+++ b/phonebook-manager-cs/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="phonebook_manager_cs.Properties.Settings.ConnectionString"
+            connectionString="DATA SOURCE=LAPTOP-UIK7JGOD:1522/XE;PASSWORD=password123;USER ID=PHONEBOOK"
+            providerName="Oracle.ManagedDataAccess.Client" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
